@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.226 2021/12/24 15:57:23 wiz Exp $
+# $NetBSD: Makefile,v 1.227 2021/12/24 16:07:12 wiz Exp $
 #
 
 COMMENT=	Clocks, calendars, daily planners and other time related applications
@@ -168,7 +168,6 @@ SUBDIR+=	py-snaptime
 SUBDIR+=	py-tempora
 SUBDIR+=	py-trading-calendars
 SUBDIR+=	py-trytond-calendar
-SUBDIR+=	py-trytond-calendar-classification
 SUBDIR+=	py-trytond-company-work-time
 SUBDIR+=	py-trytond-timesheet
 SUBDIR+=	py-trytond-timesheet-cost
