@@ -1,1 +1,0 @@
-The calendar_classification module of the Tryton application platform.
