@@ -1,21 +1,0 @@
-# $NetBSD: Makefile,v 1.5 2021/12/22 22:54:55 mef Exp $
-TRYTON_MODULE_NAME=	trytond_calendar_classification
-.include "../../devel/py-trytond/Makefile.common"
-CATEGORIES=	python time
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://www.tryton.org/
-COMMENT=	Calendar classification module of Tryton's application platform
-LICENSE=	gnu-gpl-v3
-
-DEPENDS+=	${PYPKGPREFIX}-vobject>=0.8.0:../../textproc/py-vobject
-DEPENDS+=	${PYPKGPREFIX}-trytond-calendar>=${TRYTON_BASEVER}:../../time/py-trytond-calendar
-DEPENDS+=	${PYPKGPREFIX}-trytond>=${TRYTON_BASEVER}:../../devel/py-trytond
-
-USE_LANGUAGES=	# none
-
-#YTHON_VERSIONS_ACCEPTED=	27 # py-pywebdav via py-trytond-calendar
-
-.include "../../lang/python/application.mk"
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
