@@ -1,33 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2016/12/04 21:13:08 rodent Exp $
-${PYSITELIB}/trytond/modules/calendar_classification/__init__.py
-${PYSITELIB}/trytond/modules/calendar_classification/__init__.pyc
-${PYSITELIB}/trytond/modules/calendar_classification/__init__.pyo
-${PYSITELIB}/trytond/modules/calendar_classification/calendar_.py
-${PYSITELIB}/trytond/modules/calendar_classification/calendar_.pyc
-${PYSITELIB}/trytond/modules/calendar_classification/calendar_.pyo
-${PYSITELIB}/trytond/modules/calendar_classification/locale/bg.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/ca.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/cs.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/de.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/es.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/es_419.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/fr.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/hu_HU.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/it_IT.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/ja_JP.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/lo.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/lt.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/nl.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/pl.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/pt_BR.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/ru.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/sl.po
-${PYSITELIB}/trytond/modules/calendar_classification/locale/zh_CN.po
-${PYSITELIB}/trytond/modules/calendar_classification/tryton.cfg
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
